samples/webinfo/k8s/client-info-deployment.yaml
# k8s/client-info-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-info-web-deployment
  labels:
    app: client-info-web
spec:
  replicas: 1 # 여러 개의 Pod를 실행하여 고가용성 제공
  selector:
    matchLabels:
      app: client-info-web
  template:
    metadata:
      labels:
        app: client-info-web
    spec:
      containers:
      - name: client-info-web-container
        image: postout7979/client-info-web:latest # Docker Hub에 푸시된 이미지 이름
        ports:
        - containerPort: 5000 # Flask 앱이 리스닝하는 포트
        livenessProbe:
          httpGet:
            path: / # 웹 서버의 루트 경로
            port: 5000
          initialDelaySeconds: 10 # 컨테이너 시작 후 첫 번째 체크까지 대기 시간
          periodSeconds: 15       # 체크 주기
          timeoutSeconds: 5       # 체크 타임아웃
          failureThreshold: 3     # 실패 횟수
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
        resources: # 리소스 요청 및 제한 (클러스터 관리 측면에서 중요)
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "128Mi"
            cpu: "200m"
