samples/webinfo/k8s/client-info-httpproxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-info
  labels:
    app: client-info-web
spec:
  #  tls:
  #  - hosts: 
  #      - web-client.tanzu.lab
  #    secretName: web-client-tls
  virtualhost:
    fqdn: web-client.tanzu.lab
  routes:
    - conditions:
      - prefix: /
      services:
        - name: client-info-web-service
          port: 80
